@@ -1,20 +1,46 @@
 galapix - A Zoomable Image Viewer zoomview 
 ==========================================
 
-galapix is an JPEG image viewer that allows you to directly zoom into
-large collection of tens of thousand of images from tiny thumbnails
-down to the images original size fluently with short load times and no
-loss of interactivity. It accomplishes this by keeping a tile cache
-which stores not only thumbnails for one size, but thumbnails of many
+galapix is an image viewer that allows you to directly zoom into large
+collection of tens of thousand of images from tiny thumbnails down to
+the images original size fluently with short load times and no loss of
+interactivity. It accomplishes this by keeping a tile cache which
+stores not only thumbnails for one size, but thumbnails of many
 different sizes. This thumbnail cache requires at maximum 1.5x times
-as much storage as the images themselves.
+as much storage as the images themselves. 
 
 galapix can also be used to view gigapixel sized images, it however
 currently requires the tiles for that to be generated previously,
 which can take quite a bit of time and memory.
 
-galapix is currently limited to JPEG files, no other fileformat is
-currently supported.
+galapix supports a wide varity of image formats including JPEG, PNG,
+XCF (Gimp), KRA (Krita) and all stuff supported by ImageMagick.
+
+
+Features:
+=========
+
+  * support for large image collections of tens of thousands of images
+
+  * support for extremely large images (gigapixel range)
+
+  * support for a wide varity of image formats
+
+  * support for a wide varity of archive formats
+
+  * very fast once the cache is generated (3sec to load 150'000 images
+    at once)
+
+  * flexible layouting functions
+
+  * abiltiy to move images around and resize them on the workspace
+
+  * very responsive, loading happens completly in the background and
+    never blocks interactivity
+
+  * workspace layout can be saved and loaded 
+
+  * Space Navigator is fully supported
 
 
 Required Libraries and Tools:
