@@ -50,7 +50,7 @@ galapix_sources = [
     'src/url.cpp',
     'src/viewer.cpp',
     'src/viewer_state.cpp',
-    'src/viewer_thread.cpp',
+    'src/sdl_viewer.cpp',
     'src/tar.cpp',
     'src/workspace.cpp',
     'src/xcf.cpp',
